# ai_interface

./: README.md  pyproject.toml
docker/: Dockerfile  README.md
docker/ai_detection/: Dockerfile  README.md
